--- a/app/views/customer_mailer/admin_contact_stolen_email.text.haml
+++ b/app/views/customer_mailer/admin_contact_stolen_email.text.haml
@@ -1,23 +1,30 @@
 = @customer_contact.body.html_safe
+
 \--------------------------------
 
 \---
-Make: #{@customer_contact.bike.mnfg_name}
 
-Serial: #{@customer_contact.bike.serial_number}
+= t(".text.make")
+= @customer_contact.bike.mnfg_name
 
-Color:
+= t(".text.serial")
+= @customer_contact.bike.serial_number
+
 - if @customer_contact.bike.paint.present?
+  = t(".text.color")
   = @customer_contact.bike.paint.name
 - else
+  = t(".text.color")
   = @customer_contact.bike.primary_frame_color.name
+
 \---
+
 - if @customer_contact.bike.stolen
-  Hopefully you find the #{@customer_contact.bike.type} soon. Give us a heads up when you do!
-* Claim the #{@customer_contact.bike.type} here: #{bike_url(@customer_contact.bike)} *
+  = t(".text.hopefully_you_find", bike_type: @customer_contact.bike.type)
 
-Sign up or sign in to BikeIndex.org to claim your #{@customer_contact.bike.type} and edit it, upload photos and make sure you never lose track of your trusty steed!
+= t(".text.claim_the_bike", bike_type: @customer_contact.bike.type, bike_url: bike_url(@customer_contact.bike))
 
+= t(".text.sign_up_or_in", bike_type: @customer_contact.bike.type)
 
 
 \--------------------------------
