--- a/app/views/customer_mailer/magic_login_link_email.text.haml
+++ b/app/views/customer_mailer/magic_login_link_email.text.haml
@@ -1,12 +1,11 @@
-Here is your passwordless sign in url
+= t(".text.here_is_your_login_url")
 
 = @url
 
 \---
 
-This link is only valid for one sign in. It expires in 45 minutes.
+= t(".text.this_link_is_only_valid_once")
 
 \---
 
-If you did not request a passwordless sign in link, please reply to this email and let us know.
-
+= t(".text.if_you_did_not_request")
