--- a/app/views/customer_mailer/password_reset_email.text.haml
+++ b/app/views/customer_mailer/password_reset_email.text.haml
@@ -1,8 +1,8 @@
-Whoops! It appears you have forgotten your Bike Index password! Please click the link below (or paste it into your browser) to create a new password.
+= t(".text.whoops_it_appears_you_have_forgotten_your")
 
 = @url
 
-If you did not request a new password to be created, you should probably hit us up: support@bikeindex.org
+= t(".text.if_you_did_not_request_a_new_password_to_")
 
-Thanks,
-Bike Index Management
+= t(".text.thanks")
+= t(".text.bike_index_management")
