--- a/app/views/customer_mailer/stolen_notification_email.html.haml
+++ b/app/views/customer_mailer/stolen_notification_email.html.haml
@@ -1,31 +1,41 @@
 - @bike = @stolen_notification.bike
+
 .stolen-notification-from
+  - sender_email = @stolen_notification.sender.email
   %p
     - if @bike.stolen?
-      #{@stolen_notification.sender.email} sent you a message about your #{link_to "stolen #{@bike.type}", bike_url(@bike)}!
+      = link = link_to t(".html.stolen_biketype", biketype: @bike.type), bike_url(@bike)
+      = t(".html.sender_email_sent_you_a_message_html", sender_email: sender_email, link: link)
+
     - else
       - if @bike.contact_owner_user?
-        #{@stolen_notification.sender.email} sent you a message about your #{link_to "#{@bike.type}", bike_url(@bike)}!
+        = t(".html.sender_email_sent_you_a_message_html", sender_email: sender_email, link: link_to(@bike.type, bike_url(@bike)))
         %br
-        %strong.stolen-color
-          They believe it is stolen!
+        %strong.stolen-color= t(".html.they_believe_it_is_stolen")
+
       - else
-        Please help #{@stolen_notification.sender.display_name} contact the owner of this #{link_to @bike.type, bike_url(@bike)}, they believe it is <span class="stolen-color">stolen</span>!
+        - sender_name = @stolen_notification.sender.display_name
+        = t(".html.please_help_sender_html", sender_name: sender_name, link: link_to(@bike.type, bike_url(@bike)))
         %br
+
         %span{ style: "display: block; line-height: 1.5; margin-top: 0.5rem; font-style: normal;" }
-          You can just forward this message to the owner's email address: #{@bike.owner_email}
+          = t(".html.you_can_just_forward_this_message_to", bikeowner_email: @bike.owner_email)
+
         %br
         %small.less-strong{ style: "display: block; line-height: 1.5;" }
-          You registered this #{@bike.type} on #{l @bike.current_ownership.created_at, format: :dotted}. The owner hasn't claimed it yet and it isn't marked stolen, so you have received this email to authorize contacting them.
+          - date = l @bike.current_ownership.created_at, format: :dotted
+          = t(".html.you_registered_this_biketype_on", biketype: @bike.type, date: date)
+
       %small.less-strong{ style: "display: block; line-height: 1; margin: 1em 0 -0.5rem;" }
-        If you believe this email is illegitimate, please contact support@bikeindex.org
+        = t(".html.if_you_believe_this_email_is_illegitimate")
 
 %p
   = @stolen_notification.message
 
 - if @stolen_notification.reference_url.present?
   %p
-    link: #{link_to @stolen_notification.reference_url, @stolen_notification.reference_url}
+    = t(".html.link")
+    = link_to(@stolen_notification.reference_url, @stolen_notification.reference_url)
 
 - if @stolen_notification.sender.name.present?
   %p{ style: 'color: #ccc; margin: 2em 0 2em 1em;' }
@@ -34,6 +44,7 @@
 %hr{ style: 'margin: 40px 0;' }
 
 %p.less-strong.center-text
-  This email is about the #{@bike.type} registered on Bike Index on #{l @bike.created_at, format: :dotted}
+  - date = l @bike.created_at, format: :dotted
+  = t(".html.this_email_is_about_the_biketype_register", biketype: @bike.type, date: date)
 
-= render partial: '/shared/email_bike_box'
+= render partial: 'shared/email_bike_box'
