--- a/app/views/customer_mailer/welcome_email.html.haml
+++ b/app/views/customer_mailer/welcome_email.html.haml
@@ -1,7 +1,5 @@
-%h1
-  Welcome to Bike Index
-%p
-  Good thinking! We’re glad you’ve joined.
+%h1= t(".html.welcome_to_bike_index")
 
-%p
-  Add some information about your bikes when you have the chance.
+%p= t(".html.good_thinking_were_glad_youve_joined")
+
+%p= t(".html.add_some_information_about_your_bikes_whe")
