--- a/app/views/customer_mailer/welcome_email.text.haml
+++ b/app/views/customer_mailer/welcome_email.text.haml
@@ -1,9 +1,9 @@
-* Welcome to Bike Index! *
+= t(".text.welcome_to_bike_index")
 
-Good thinking! We’re glad you’ve joined, you smarty pants.
+= t(".text.good_thinking_were_glad_youve_joined_you_")
 
-Add some information about your bikes when you've got the chance!
+= t(".text.add_some_information_about_your_bikes_whe")
 
 
-Thanks,
-Bike Index Management
+= t(".text.thanks")
+= t(".text.bike_index_management")
