--- a/app/views/customer_mailer/admin_contact_stolen_email.html.haml
+++ b/app/views/customer_mailer/admin_contact_stolen_email.html.haml
@@ -5,6 +5,6 @@
 %hr{ style: 'margin: 40px 0;' }
 
 %p.less-strong.center-text
-  This email is about the #{@bike.type} registered on Bike Index on #{@bike.created_at.strftime('%m.%d.%y')}
+  = t(".html.this_email_is_about", bike: @bike.type, registration_date: @bike.created_at.strftime('%m.%d.%y'))
 
-= render partial: '/shared/email_bike_box'
+= render partial: "shared/email_bike_box"
