--- a/app/views/customer_mailer/confirmation_email.html.haml
+++ b/app/views/customer_mailer/confirmation_email.html.haml
@@ -1,12 +1,12 @@
 %h1.center-text{ style: "margin-top: 2rem;" }
-  You're almost there!
+  = t(".html.youre_almost_there")
 
 
 %h3.center-text{ style: "margin: 2rem 0 3rem;" }
-  Please confirm your email address
+  = t(".html.please_confirm_your_email_address")
 
-= link_to "Verify email", confirm_users_url(id: @user.id, code: @user.confirmation_token, partner: @partner), class: "binx-button"
+= link_to t(".html.verify_email"), confirm_users_url(id: @user.id, code: @user.confirmation_token, partner: @partner), class: "binx-button"
 
 - unless @partner
   %p.less-strong.center-text
-    Click the <em>Verify email</em> button to finish signing up!
+    = t(".html.click_to_verify_html")
