--- a/app/views/customer_mailer/password_reset_email.html.haml
+++ b/app/views/customer_mailer/password_reset_email.html.haml
@@ -1,12 +1,12 @@
-%p
-  Whoops! It appears you have forgotten your Bike Index password!
-%p{ style: 'margin-bottom: 2em;' }
-  Please click the button below to create a new password.
+%p= t(".html.whoops_it_appears_you_have_forgotten_your")
 
-= link_to 'Reset password', @url, class: 'binx-button'
+%p{ style: 'margin-bottom: 2em;' }
+  = t(".html.please_click_the_button_below_to_create_a")
+
+= link_to t(".html.reset_password"), @url, class: 'binx-button'
 
 %hr{ style: 'margin-top: 40px;' }
 
 %p.center-text.less-strong
-  If you did not request a new password, you should probably #{ link_to 'tell us', 'mailto:support@bikeindex.org' }.
-
+  - link = link_to t(".html.tell_us"), 'mailto:support@bikeindex.org'
+  = t(".html.if_you_did_not_request_a_new_password_html", link: link)
