--- a/app/views/customer_mailer/recovered_from_link.html.haml
+++ b/app/views/customer_mailer/recovered_from_link.html.haml
@@ -1,19 +1,18 @@
-%h1 We're so glad you got your #{ @biketype } back!
+%h1= t(".html.were_so_glad_you_got_your_biketype_back", biketype:  @biketype )
 
-%p
-  Your #{ @biketype } was marked recovered on Bike Index:
+%p= t(".html.your_biketype_was_marked_recovered_on_bik", biketype:  @biketype )
 
-= render partial: '/shared/email_bike_box', locals: { bike_url: bike_url(@bike) }
+= render partial: "shared/email_bike_box", locals: { bike_url: bike_url(@bike) }
 
 - if @stolen_record.recovered_description.present?
   %p
-    The description of the recovery was:
+    = t(".html.the_description_of_the_recovery_was")
     %span.less-strong
       = @stolen_record.recovered_description
 
 - if @recovering_user.present?
   %p
-    Marked recovered by:
+    = t(".html.marked_recovered_by")
     %span.less-strong
       = @recovering_user.email
       = "(#{@recovering_user.name})" if @recovering_user.name
@@ -22,6 +21,4 @@
 
 %p.center-text
   %em
-    %strong
-      Note:
-    If you didn't recover your bike, or marked it recovered accidentally, reply to this email and let us know!
+    = t(".html.note_if_you_didnt_recover_html")
