--- a/app/views/organized_mailer/geolocated_message.html.haml
+++ b/app/views/organized_mailer/geolocated_message.html.haml
@@ -1,8 +1,8 @@
 %h1
-  = t(".your_bike", bike_title: @bike.title_string)
+  = t(".html.your_bike", bike_title: @bike.title_string)
 
 %p
-  = t(".is_located_at_html", address: @organization_message.address)
+  = t(".html.is_located_at_html", address: @organization_message.address)
 
 %p
   %strong= @organization_message.body
@@ -10,4 +10,4 @@
 <img class="geolocated-message-map" src="https://maps.googleapis.com/maps/api/staticmap?center=#{@organization_message.latitude},#{@organization_message.longitude}&zoom=13&size=640x400&maptype=roadmap&scale=2&markers=color:red%7C#{@organization_message.latitude},#{@organization_message.longitude}&key=#{ENV["GOOGLE_MAPS_STATIC"]}">
 
 %p
-  %em= t(".sent_by", sender_name: @organization_message.sender.display_name, org_name: @organization_message.organization.name)
+  %em= t(".html.sent_by", sender_name: @organization_message.sender.display_name, org_name: @organization_message.organization.name)
