--- a/app/views/organized_mailer/organization_invitation.text.haml
+++ b/app/views/organized_mailer/organization_invitation.text.haml
@@ -1,9 +1,9 @@
 - if @new_user = true
-  = t(".hello_welcome_to_bike_index")
+  = t(".text.hello_welcome_to_bike_index")
 - else
-  = t(".hello")
+  = t(".text.hello")
 
 - if @sender.present?
-  = t(".you_are_a_member", sender_name: @sender.display_name, org_name: @organization.name)
+  = t(".text.you_are_a_member", sender_name: @sender.display_name, org_name: @organization.name)
 
-= t(".sign_up_or_sign_in", org_name: @organization.name)
+= t(".text.sign_up_or_sign_in", org_name: @organization.name)
