--- a/app/views/organized_mailer/partial_registration.html.haml
+++ b/app/views/organized_mailer/partial_registration.html.haml
@@ -1,15 +1,15 @@
-%h1= t(".youre_almost_done")
+%h1= t(".html.youre_almost_done")
 
 - color_and_brand = []
 - color_and_brand << Color.find(@b_param.primary_frame_color_id).name if @b_param.primary_frame_color_id.present?
 - color_and_brand << @b_param.mnfg_name
 - color_and_brand = color_and_brand.compact.join(" ")
 
-%p= t(".just_a_few_steps_away_html", color_and_brand: color_and_brand)
+%p= t(".html.just_a_few_steps_away_html", color_and_brand: color_and_brand)
 
-%p= t(".click_below_to_complete_your_registration")
+%p= t(".html.click_below_to_complete_your_registration")
 
-= link_to t(".finish_it"), new_bike_url(b_param_token: @b_param.id_token), class: 'binx-button'
+= link_to t(".html.finish_it"), new_bike_url(b_param_token: @b_param.id_token), class: 'binx-button'
 
 - if @organization && @organization.mail_snippet_body("partial").present?
   = @organization.mail_snippet_body("partial").html_safe
