--- a/app/views/organized_mailer/partial_registration.text.haml
+++ b/app/views/organized_mailer/partial_registration.text.haml
@@ -1,7 +1,7 @@
-= t(".youre_almost_done")
+= t(".text.youre_almost_done")
 
-= t(".youre_just_a_few_steps_away_from_register")
+= t(".text.youre_just_a_few_steps_away_from_register")
 
-= t(".go_to_the_following_url_to_finish")
+= t(".text.go_to_the_following_url_to_finish")
 
 = new_bike_url(b_param_token: @b_param.id_token)
