Revert url helper

--- a/app/views/customer_mailer/updated_terms_email.html.haml
+++ b/app/views/customer_mailer/updated_terms_email.html.haml
@@ -33,7 +33,7 @@
           = t(".html.nothing_significant_has_changed_about_how")
 
         %p
-          - link = link_to t(".html.here"), news_url
+          - link = link_to t(".html.here"), "https://bikeindex.org/news"
           = t(".html.check_link_to_see_more_html", link: link)
 
         %p{ style: "margin-top: 40px;" }
