--- a/app/views/customer_mailer/updated_terms_email.html.haml
+++ b/app/views/customer_mailer/updated_terms_email.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{ content: 'text/html; charset=UTF-8', 'http-equiv' => 'Content-Type' }
     %title
-      = content_for?(:title) ? yield(:title) : 'Bike Index'
+      = content_for?(:title) ? yield(:title) : "Bike Index"
     = stylesheet_link_tag 'email'
   %body
     .binx-wrapper
@@ -13,32 +13,38 @@
         - if @organization.present? && controller_path == 'organized_mailer' && @organization.mail_snippet_body('header').present?
           = @organization.mail_snippet_body('header').html_safe
         %h2
-          Hello #{@user.display_name}!
+          = t(".html.hello", name: @user.display_name)
 
         %p
-          %strong
-            You may not know, but Bike Index recently became a 501(c)(3) nonprofit.
-          We've always wanted to provide one free, universal registration and being a nonprofit helps us get there. You can read more <a href="https://bikeindex.org/news/bike-index--now-a-nonprofit">here</a>
+          - link = link_to t(".html.here"), news_url("bike-index--now-a-nonprofit")
+          %strong= t(".html.you_may_not_know_but_bike_index_recently_")
+          = t(".html.weve_always_wanted_to_provide_html", link: link)
 
         %p
-          We're emailing you because we updated our privacy policy to reflect the fact that we're now a nonprofit. We also made some copy edits and clarifications. The updated versions of our <a href="https://bikeindex.org/privacy">privacy policy</a>#{", #{link_to 'vendor terms', vendor_terms_url}".html_safe if @user.has_membership? } and <a href="https://bikeindex.org/terms">terms of service</a> are live on Bike Index.
+          = t(".html.were_emailing_you_because_we_updated_our_")
+
+          %ul
+            %li= link_to t(".html.bike_index_privacy_policy"), privacy_url
+            %li= link_to t(".html.bike_index_terms_of_service"), terms_url
+            - if @user.has_membership?
+              %li= link_to t(".html.bike_index_vendor_terms_of_service"), vendor_terms_url
 
         %p
-          Nothing significant has changed about how we handle your data or trust. We will always protect your information and never sell or trade it. This is the first substantive change we've made to our privacy policy and terms since we first drafted them in 2014. We take your trust very seriously and don't plan on having to do this often. Even three years was too soon.
+          = t(".html.nothing_significant_has_changed_about_how")
 
         %p
-          Check <a href="https://bikeindex.org/news">here</a> to see more of what we’ve been up to. 
+          - link = link_to t(".html.here"), "https://bikeindex.org/news"
+          = t(".html.check_link_to_see_more_html", link: link)
 
         %p{ style: "margin-top: 40px;" }
-          As always, thanks for helping register bikes,
+          = t(".html.as_always_thanks_for_helping_register_bik")
           %br
-          Lily Williams and the Bike Index Team
+          = t(".html.lily_williams_and_the_bike_index_team")
 
         %p{ style: "margin-bottom: 40px;" }
-          %em.less-strong
-            p.s. If you like reading these kinds of documents or have any questions, just reply to this email!
+          %em.less-strong= t(".html.ps_if_you_like_reading_these_kinds_of_doc")
 
       .binx-footer
         %h5
-          Help prevent bike theft, #{ link_to 'make a donation', support_the_index_url }
-
+          - link = link_to t(".html.make_a_donation"), support_the_index_url
+          = t(".html.help_prevent_bike_theft_html", link: link)
