--- a/app/views/organized_mailer/geolocated_message.html.haml
+++ b/app/views/organized_mailer/geolocated_message.html.haml
@@ -1,17 +1,13 @@
 %h1
-  Your #{@bike.title_string}
+  = t(".html.your_bike", bike_title: @bike.title_string)
 
 %p
-  Is located at:
-  %strong
-    = @organization_message.address
+  = t(".html.is_located_at_html", address: @organization_message.address)
 
 %p
-  %strong
-    #{@organization_message.body}
+  %strong= @organization_message.body
 
 <img class="geolocated-message-map" src="https://maps.googleapis.com/maps/api/staticmap?center=#{@organization_message.latitude},#{@organization_message.longitude}&zoom=13&size=640x400&maptype=roadmap&scale=2&markers=color:red%7C#{@organization_message.latitude},#{@organization_message.longitude}&key=#{ENV["GOOGLE_MAPS_STATIC"]}">
 
 %p
-  %em
-    Sent by: #{@organization_message.sender.display_name} at #{@organization_message.organization.name}
+  %em= t(".html.sent_by", sender_name: @organization_message.sender.display_name, org_name: @organization_message.organization.name)
