--- a/app/views/organized_mailer/organization_invitation.html.haml
+++ b/app/views/organized_mailer/organization_invitation.html.haml
@@ -1,10 +1,9 @@
-%h1
-  Hello #{@membership.invited_display_name},
+%h1= t(".html.hello", name: @membership.invited_display_name)
 
 - if @is_new_user
-  %h2
-    Welcome to Bike Index
-- if @sender.present?
-  %p #{@sender.display_name} has indicated that you are a member of #{@organization.name}.
+  %h2= t(".html.welcome_to_bike_index")
 
-= link_to "Join #{@organization.short_name}", new_user_url(email: @vars[:email]), class: 'binx-button'
+- if @sender.present?
+  %p= t(".html.you_are_a_member", sender_name: @sender.display_name, org_name: @organization.name)
+
+= link_to t(".html.join_org", org_name: @organization.short_name), new_user_url(email: @vars[:email]), class: 'binx-button'
