Fix missing interpolation argument in bikes/show (#1065)
* Fix missing interpolation argument

Resolves https://app.honeybadger.io/projects/35931/faults/52442699

* Fix NoMethodError

Fixes: https://app.honeybadger.io/projects/35931/faults/52395156

```ruby
{
  "controller" => "errors",
  "action" => "server_error",
  "id" => "616860",
  "format" => "html"
}
```

```ruby
 Bike.find(616860).manufacturer
 # nil

```

--- a/app/views/bikes/show.html.haml
+++ b/app/views/bikes/show.html.haml
@@ -84,11 +84,12 @@
 
           %li
             %span.attr-title #{t(".manufacturer")}:
-            -# We want to display the whole manufacturer name here, not just the simple name. So only use mnfg_name if it's other (which sanitizes)
-            - if @bike.manufacturer.name == "Other"
+            -# We want to display the whole manufacturer name here, not just the
+            -# simple name. So only use mnfg_name if it's other (which sanitizes)
+            - if @bike.manufacturer&.name == "Other"
               = @bike.mnfg_name
             - else
-              = @bike.manufacturer.name
+              = @bike.manufacturer&.name
           = @bike.attr_list_item(@bike.name, t(".name"), with_colon: true)
           = @bike.attr_list_item(@bike.frame_model, t(".model"), with_colon: true)
           = @bike.attr_list_item(@bike.year.to_s, t(".year"), with_colon: true)
