--- a/app/views/landing_pages/bike_shop_packages.html.haml
+++ b/app/views/landing_pages/bike_shop_packages.html.haml
@@ -48,7 +48,7 @@
                   %h4 #{plan.to_s.titleize} #{lead_type}
                   %h3= number_to_currency(plan_data[:cost], precision: 0)
                   %p
-                    = t("number.currency.alphabetic_code")
+                    = default_currency
                     = "/"
                     = t(".year")
                   = link_to t(".try_for_free"), nil , class: "btn btn-primary tryPaidButton", data: {plan: plan.to_s}
