--- a/app/views/admin/news/_listicle_fields.html.haml
+++ b/app/views/admin/news/_listicle_fields.html.haml
@@ -1,25 +1,36 @@
-.listicle-block.row-fluid
-  %fieldset.well
-    .span10
-      .blog-field
-        = f.text_field :title, placeholder: 'Title', class: 'form-control'
-      .blog-field
-        = f.text_area :body, placeholder: 'Body content - HTML or Markdown', class: 'form-control'
-      .blog-field
-        = f.text_field :image_credits, placeholder: 'Image credits - should be a link in HTML or Markdown', class: 'form-control'
-    .span2{ class: "page_number_#{f.object.list_order}"}
-      .listicle-image-input
-        = f.file_field :image
-        %span.min-width-notice
+.card.bg-light.mt-2
+  .card-body
+    .row
+      .col-md-6
+        .form-group
+          = f.label "Title"
+          = f.text_field :title, placeholder: 'Title', class: 'form-control'
+      .col-md-6
+        .form-group
+          = f.label "Credits"
+          = f.text_field :image_credits, placeholder: 'Image credits - should be a link in HTML or Markdown', class: 'form-control'
+    .row
+      .col-md-12
+        .form-group
+          = f.label "Body"
+          = f.text_area :body, placeholder: 'Body content - HTML or Markdown', class: 'form-control'
+    .row
+      .col-md-6
+        .form-group
+          = f.file_field :image
+        %span
           min-width  726px
-      %label.index-image-select
-        <input type="radio" name="index_image_id" value="#{f.object.id}" class="index_image_#{f.object.id}">
-        Primary image
-      .list-order
+        %label.index-image-select
+          <input type="radio" name="index_image_id" value="#{f.object.id}" class="index_image_#{f.object.id}">
+          Primary image
+      .col-md-6
         %span
           Order
-        = f.number_field :list_order, placeholder: '1', min: 0, class: 'form-control'
-        %span.current-count
-    = f.hidden_field :_destroy, class: 'remove-listicle-block'
+        .form-group
+          = f.number_field :list_order, placeholder: '1', min: 0, class: 'form-control'
+          = f.hidden_field :_destroy
+
+
+
     %a.remove_fields
       Remove
