--- a/app/javascript/packs/application_css.scss
+++ b/app/javascript/packs/application_css.scss
@@ -32,4 +32,8 @@ footer.primary-footer {
   .uppy-FileInput-btn {
     display: none;
   }
+  // Do we have any obligation to display the uppy logo?
+  .uppy-Dashboard-poweredBy {
+    display: none;
+  }
 }
