--- a/app/views/organizations/_new_form.html.haml
+++ b/app/views/organizations/_new_form.html.haml
@@ -44,7 +44,7 @@
           %label.org-form-label
             Organization kind
           .col-sm-4
-            - Organization.creatable_kinds.each do |kind|
+            - Organization.user_creatable_kinds.each do |kind|
               .radio
                 %label
                   = f.radio_button :kind, kind
