fix duplicated key

--- a/app/views/landing_pages/for_law_enforcement.html.haml
+++ b/app/views/landing_pages/for_law_enforcement.html.haml
@@ -26,7 +26,7 @@
         - automated_tweets_link = link_to t(".automated_tweets"), "https://twitter.com/stolenbikessfo"
         - local_ambassadors_link = link_to t(".local_ambassadors"), ambassadors_how_to_path
         %p
-          = t(".you_have_the_authority_to_bring_html", link: automated_tweets_link, link: local_ambassadors_link)
+          = t(".you_have_the_authority_to_bring_html", automated_tweets_link: automated_tweets_link, local_ambassadors_link: local_ambassadors_link)
 
         %p= t(".with_over_215000_registries_and_almost_55")
 
