Styling and rendering public images for admin blogs (#1061)
* styling

* commit

* commit

* commit

* commit

* working?

* new page styles

* Remove commented out html

* listicle fixing, controller changes, refactor js

* commit

* done

* commit

--- a/app/javascript/packs/application_css.scss
+++ b/app/javascript/packs/application_css.scss
@@ -32,4 +32,7 @@ footer.primary-footer {
   .uppy-FileInput-btn {
     display: none;
   }
+  .uppy-Dashboard-poweredBy {
+    display: none;
+  }
 }
