--- a/app/javascript/stylesheets/_admin.scss
+++ b/app/javascript/stylesheets/_admin.scss
@@ -176,3 +176,18 @@
     }
   }
 }
+
+.admin-public-image {
+  img {
+    max-width: 100%;
+    width: 85px;
+    height: auto;
+  }
+  font-size: 12px;
+  @include media-breakpoint-down(sm) {
+    max-height: 100%;
+    .img-box{
+      text-align: center;
+    }
+  }
+}
