sort by code_integer

--- a/app/views/admin/bike_codes/index.html.haml
+++ b/app/views/admin/bike_codes/index.html.haml
@@ -115,7 +115,7 @@
       %th
         Bike
       %th
-        = sortable "code"
+        = sortable "code_integer", "Code #"
     %tbody
       - @bike_codes.each do |bike_code|
         %tr
