--- a/app/views/admin/organizations/custom_layouts/_landing_page.html.haml
+++ b/app/views/admin/organizations/custom_layouts/_landing_page.html.haml
@@ -4,10 +4,12 @@
 = form_for @organization, { as: :organization, url: admin_organization_custom_layout_path(organization_id: @organization.to_param, id: params[:id]), action: 'update' } do |f|
   .form-group
     = f.text_area :landing_html, placeholder: 'Landing page (html)', rows: 20, class: "form-control"
-  = f.submit 'Save', class: 'btn btn-success float-right'
+  .row.justify-content-end
+    .col-auto
+      = f.submit 'Save', class: 'btn btn-success float-right'
 // Because somewhere, there is overflow hidden and it cuts off the bottom of the save button
-%ul.list-unstyled#public_images{ :"data-order-url" => order_public_images_url }
+%ul.list-unstyled#public_images.mt-4{ :"data-order-url" => order_public_images_url }
   - if @organization.public_images
-    = render partial: '/admin/news/public_image', collection: @organization.public_images, as: :public_image, locals: { skip_order: true }
+    = render partial: 'public_image', collection: @organization.public_images, as: :public_image, locals: { skip_order: true }
 %section.custom-layouts
   = render partial: 'public_images/admin_new_form', locals: { imageable_type: 'Organization' }
