--- a/app/views/info/about.html.haml
+++ b/app/views/info/about.html.haml
@@ -99,7 +99,7 @@
       does the graphic design and illustration for the Index. If anything looks good, it's probably his fault.
   %li
     %p
-      / image tag here
+      = image_tag "who/bobby-gervais.jpg", alt: "Bobby Gervais"
       %strong
         Bobby Gervais
       has had a long history of delivering and carrying stuff on his bike for work and now he's making a living out of helping people recover their bikes. Bobby helps to maintain the Bike Index, and work on new features.
