--- a/app/views/info/about.html.haml
+++ b/app/views/info/about.html.haml
@@ -59,7 +59,10 @@
     %p
       = image_tag 'who/mike-oleon.jpg', alt: 'Mike Oleon'
       = t(".mike_oleon_bio_html")
-
+  %li
+    %p
+      = image_tag 'who/bobby-gervais.jpg', alt: "Bobby Gervais"
+      = t(".bobby_gervais_bio_html")
 
 %h2.the-alumni.d-none
   = t(".alumni")
