--- a/app/views/admin/bike_codes/index.html.haml
+++ b/app/views/admin/bike_codes/index.html.haml
@@ -14,22 +14,21 @@
       .full-screen-table
         %table.table.table-striped.table-bordered.table-sm
           %thead
+            %th Batch
+            %th Created
+            %th Updated
+            %th Creator
+            %th Organization
             %th
-              Batch
+              %small count
             %th
-              Created
+              %small claimed
+            %th Prefix
             %th
-              Creator
+              %small Min
             %th
-              Organization
-            %th
-              %small
-                count
-            %th
-              %small
-                claimed
-            %th
-              Notes
+              %small Max
+            %th Notes
           %tbody
             - bike_code_batches.each do |bike_code_batch|
               %tr
@@ -39,23 +38,26 @@
                   %span.convertTime
                     = l bike_code_batch.created_at, format: :convert_time
                 %td
-                  .less-strong-hold
-                    - if bike_code_batch.user.present?
-                      = bike_code_batch.user.display_name
-                      - if current_user.developer
-                        %small.less-strong-right
-                          = bike_code_batch.user_id
+                  %small.convertTime
+                    = l bike_code_batch.updated_at, format: :convert_time
+                %td
+                  %small
+                    = bike_code_batch.user&.display_name
                 %td
                   - if bike_code_batch.organization.present?
                     = link_to bike_code_batch.organization.name, admin_bike_codes_path(organization_id: bike_code_batch.organization_id)
                 %td
-                  %small
-                    = number_with_delimiter(bike_code_batch.bike_codes.count)
+                  %small= number_with_delimiter(bike_code_batch.bike_codes.count)
                 %td
-                  %small
-                    = number_with_delimiter(bike_code_batch.bike_codes.claimed.count)
+                  %small= number_with_delimiter(bike_code_batch.bike_codes.claimed.count)
                 %td
-                  = bike_code_batch.notes
+                  %small= bike_code_batch.prefix
+                %td
+                  %small= number_with_delimiter(bike_code_batch.min_code_integer)
+                %td
+                  %small= number_with_delimiter(bike_code_batch.max_code_integer)
+                %td
+                  %small= bike_code_batch.notes
 
 .row
   .col-md-6
@@ -104,18 +106,12 @@
 .full-screen-table
   %table.table.table-striped.table-bordered.table-sm.without-exterior-border
     %thead.small-header
-      %th
-        = sortable "created_at"
-      %th
-        = sortable "organization_id"
-      %th
-        = sortable "bike_code_batch_id", "Batch"
-      %th
-        Linked
-      %th
-        Bike
-      %th
-        = sortable "code"
+      %th= sortable "created_at"
+      %th= sortable "organization_id"
+      %th= sortable "bike_code_batch_id", "Batch"
+      %th Linked
+      %th Bike
+      %th= sortable "code_integer", "Code #"
     %tbody
       - @bike_codes.each do |bike_code|
         %tr
