--- a/app/views/admin/organizations/custom_layouts/_mail_snippet.html.haml
+++ b/app/views/admin/organizations/custom_layouts/_mail_snippet.html.haml
@@ -23,6 +23,6 @@
 
 %ul.list-unstyled#public_images{ :"data-order-url" => order_public_images_url }
   - if @mail_snippet.public_images
-    = render partial: 'public_image', collection: @mail_snippet.public_images, as: :public_image, locals: { skip_order: true }
+    = render partial: 'public_images/admin_public_image', collection: @mail_snippet.public_images, as: :public_image, locals: { skip_order: true }
 %section.custom-layouts
   = render partial: 'public_images/admin_new_form', locals: { imageable_type: 'MailSnippet' }
