css hide for custom layouts

--- a/app/javascript/stylesheets/_admin.scss
+++ b/app/javascript/stylesheets/_admin.scss
@@ -191,3 +191,12 @@
     }
   }
 }
+
+.not-blog-public-images {
+  .image-delete-button {
+    display: none;
+  }
+  .index-image-select {
+    display: none;
+  }
+}
