--- a/app/javascript/packs/application_css.scss
+++ b/app/javascript/packs/application_css.scss
@@ -27,3 +27,17 @@
 footer.primary-footer {
   display: none;
 }
+
+// Uppy Styles
+@import '@uppy/core/dist/style.css';
+@import '@uppy/dashboard/dist/style.css';
+@import '@uppy/progress-bar/dist/style.css';
+// Hide uppy file upload button because it's not needed
+.uppy {
+  .uppy-FileInput-btn {
+    display: none;
+  }
+  .uppy-Dashboard-poweredBy {
+    display: none;
+  }
+}
